comrade-chatgpt-bot-main/user_manager/service_user_manager.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-manager-service
  namespace: comrade-ho-chi-minh
spec:
  selector:
    app.kubernetes.io/name: user-manager
  ports:
    - port: 5000
      targetPort: healthcheck
  type: ClusterIP
