comrade-chatgpt-bot-main/user_manager/ingress_user_manager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-manager-ingress
  namespace: comrade-ho-chi-minh
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: user-manager-auth-secret
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: comrade-ho-chi-minh.space
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: user-manager-service
            port:
              number: 5000
  tls:
  - hosts:
    - comrade-ho-chi-minh.space
    secretName: user-manager-nikita-tls
